--- a/cpp_00/ex00/Makefile
+++ b/cpp_00/ex00/Makefile
@@ -11,7 +11,7 @@ OBJ_DIR =
 
 SRC := megaphone.cpp
 
-OBJ = $(patsubst $(SRC_DIR)/%.c,$(OBJ_DIR)/%.o, $(SRC))
+OBJ = $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o, $(SRC))
 
 
 # ----- COLORS -----
